Made DriverTable extends AbstractTable for reducing amount of code.